<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/my_main_color"
    tools:context=".MainActivity">


    <LinearLayout
        android:id="@+id/linearLayoutOrder"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/my_main_color"
        android:gravity="center"

        android:orientation="vertical"
        android:paddingLeft="30dp"
        android:paddingRight="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:textStyle="bold|italic"
            android:textSize="35sp"
            android:gravity="center"
            android:layout_marginTop="25dp"
            android:layout_marginBottom="20dp"
            android:textColor="@color/my_main_color"
            android:background="@color/my_color_text2"
            android:text="@string/headerText" />

        <EditText
            android:id="@+id/editTextName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enterName"
            android:inputType="textPersonName"
            android:maxLength="20"
            android:minHeight="48dp"
            android:textColor="@color/my_color_text1"
            android:textColorHint="@color/my_color_text2"
            android:textSize="25sp" />

        <EditText
            android:id="@+id/editTextPhone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dp"
            android:hint="@string/contactNumber"
            android:inputType="phone"
            android:maxLength="10"
            android:minHeight="48dp"
            android:textColor="@color/my_color_text1"
            android:textColorHint="@color/my_color_text2"
            android:textSize="25sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Spinner
                android:theme="@style/mySpinnerItemStyle"
                android:id="@+id/spinnerCarName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="20dp"
                android:contentDescription="@string/chooseCar"
                android:layout_weight="1"
                android:background="@color/my_color_spinner"
                android:minHeight="48dp" />

            <Spinner
                android:id="@+id/spinnerCarModel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="20dp"
                android:layout_weight="1"
                android:background="@color/my_color_spinner"
                android:contentDescription="@string/chooseModel"
                android:minHeight="48dp"
                android:theme="@style/mySpinnerItemStyle" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:layout_marginTop="20dp"
            android:orientation="vertical">

            <ListView
                android:id="@+id/listAutoParts"
                android:listSelector="@color/my_selector_color"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:divider="@color/my_color_text1"
                android:dividerHeight="1dp"
                android:footerDividersEnabled="false"
                tools:listitem="@layout/activity_list_auto_parts"/>
        </LinearLayout>

        <Button
            style="@style/Widget.MaterialComponents.Button"
            android:id="@+id/btnOrder"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:layout_marginTop="25dp"
            android:onClick="onClickButtonOrder"
            android:textColor="@color/my_main_color"
            android:background="@color/my_color_text2"
            android:text="Order" />


    </LinearLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayoutOrder"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_marginTop="100dp"
        android:layout_marginBottom="100dp"
        android:background="@color/my_color_spinner"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/textView2"
                android:layout_marginTop="100dp"
                android:layout_marginBottom="50dp"
                android:gravity="center"
                android:textColor="@color/my_color_text2"
                android:textSize="35sp"
                android:textStyle="bold|italic"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/yourOrder" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv3"
                    android:layout_width="wrap_content"
                    android:textColor="@color/my_color_text2"
                    android:textSize="30sp"
                    android:textStyle="bold|italic"
                    android:layout_height="wrap_content"
                    android:paddingLeft="30dp"
                    android:layout_weight="1"
                    android:text="Name:" />
                <TextView
                    android:id="@+id/tv4"
                    android:layout_width="wrap_content"
                    android:textColor="@color/my_color_text2"
                    android:textSize="30sp"
                    android:textStyle="bold|italic"
                    android:layout_height="wrap_content"
                    android:layout_weight="2" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv5"
                    android:layout_width="wrap_content"
                    android:textColor="@color/my_color_text2"
                    android:textSize="30sp"
                    android:textStyle="bold|italic"
                    android:layout_height="wrap_content"
                    android:paddingLeft="30dp"
                    android:layout_weight="1"
                    android:text="Phone:" />
                <TextView
                    android:id="@+id/tv6"
                    android:layout_width="wrap_content"
                    android:textColor="@color/my_color_text2"
                    android:textSize="30sp"
                    android:textStyle="bold|italic"
                    android:layout_height="wrap_content"
                    android:layout_weight="2" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv7"
                    android:layout_width="wrap_content"
                    android:textColor="@color/my_color_text2"
                    android:textSize="30sp"
                    android:textStyle="bold|italic"
                    android:layout_height="wrap_content"
                    android:paddingLeft="30dp"
                    android:layout_weight="1"
                    android:text="Car:" />
                <TextView
                    android:id="@+id/tv8"
                    android:layout_width="wrap_content"
                    android:textColor="@color/my_color_text2"
                    android:textSize="30sp"
                    android:textStyle="bold|italic"
                    android:layout_height="wrap_content"
                    android:layout_weight="2" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="180dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv9"
                    android:layout_width="wrap_content"
                    android:textColor="@color/my_color_text2"
                    android:textSize="30sp"
                    android:paddingRight="50dp"
                    android:textStyle="bold|italic"
                    android:layout_height="wrap_content"
                    android:paddingLeft="30dp"

                    android:text="Part:" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/imageOrder"
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:src="@drawable/parts_1" />

                    <TextView
                        android:id="@+id/tv10"
                        android:layout_width="wrap_content"
                        android:textColor="@color/my_color_text2"
                        android:textSize="30sp"
                        android:textStyle="bold|italic"
                        android:layout_height="wrap_content"
                        android:layout_weight="2" />
                    <TextView
                        android:id="@+id/tv11"
                        android:layout_width="wrap_content"
                        android:textColor="@color/my_color_text2"
                        android:textSize="30sp"
                        android:textStyle="bold|italic"
                        android:layout_height="wrap_content"
                        android:layout_weight="2" />
                </LinearLayout>

            </LinearLayout>

            <Button
                android:id="@+id/button2"
                android:layout_marginTop="40dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="35sp"
                android:background="@color/my_color_text2"
                android:onClick="onClickButtonOK"
                android:textColor="@color/my_main_color"
                android:text="OK" />
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>